--- a/style.css
+++ b/style.css
@@ -5769,9 +5769,7 @@ border-bottom: solid 3px rgb(119, 195, 223);
     bottom: 0;
     left: 0;
     width: 3rem;
-    height: 100%;
-    background: linear-gradient(to right, transparent 0%, rgba(0, 0, 0, 0.05) calc(30% - 2px), rgba(0, 0, 0, 0.075) 30%, rgba(0, 0, 0, 0.05) calc(30% + 2px), transparent 100%);
-    pointer-events: none; }
+    height: 100%; } }
     @media (min-width: 970px) {
       #index .p-signboard::before {
         left: calc(50% - 1.5rem);} }
